force-app/main/default/objects/Assignment__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homework</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>