force-app/main/default/objects/Assignment__c/fields/Max_Points__c.field-meta.xml
<CustomField>
    <fullName>Max_Points__c</fullName>
    <label>Max Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>